objects/gvp__Activity_Summary_Report_History__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Activity Summary Report History</relationshipLabel>
        <relationshipName>Activity_Summary_Report_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Filter_Field__c</fullName>
        <description>Hold the API name of a field to filter the Activity Recap</description>
        <label>Custom Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Filter_Text__c</fullName>
        <description>Text used in conjunction with the &quot;Custom Filter Field&quot; to filter the Activity Recap</description>
        <label>Custom Filter Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Sort_Text__c</fullName>
        <description>Used to store the user&apos;s sort criteria</description>
        <label>Custom Sort Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activity Summary Report History</relationshipLabel>
        <relationshipName>Account_Call_Email_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Email_Sent_Time__c</fullName>
        <label>Email Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gvp__Email_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activity_Summary_Report_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Include_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Include all Activities</description>
        <label>Include Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Include_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If running an Activity Summary report by distributor or territory, this option is used to include all account call activity, or only by a single user</description>
        <label>Include All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Include_Feedback__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Include &quot;Feedback&quot; row</description>
        <label>Include Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Is_Batch_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When generating emails from the batch code, only retrieve batch templates where this flag is true</description>
        <inlineHelpText>When generating emails from the batch code, only retrieve batch templates where this flag is true</inlineHelpText>
        <label>Is Batch Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Is_Batch_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true, temporary records generated from the batch process will respect the &quot;Hide Objects&quot; field from the custom settings</description>
        <label>Is Batch Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Is_Batch_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when using the record as a batch template for the distributor recap</description>
        <inlineHelpText>Set to true when using the record as a batch template for the distributor recap</inlineHelpText>
        <label>Is Batch Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Report_Type__c</fullName>
        <description>Activity Recap Type - valid inputs are &quot;user&quot;, &quot;territory&quot;, &quot;distributor&quot;, &quot;brand&quot;</description>
        <label>Report Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>gvp__Territory__c</referenceTo>
        <relationshipLabel>Activity Summary Report History</relationshipLabel>
        <relationshipName>Account_Call_Email_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Use_Batch_Date_Range__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if batch code should use the existing date range on the batch record or use the default Today() - Number of days in custom setting</description>
        <label>Use Batch Date Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Call_Email_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity Summary Report History</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ASRH-{00000}</displayFormat>
        <label>Activity Summary Report History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Summary Report History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>